data/derived/fa15/progs/unify/prog1253.ml.out
Characters 78-97:
  if (sumList (digitsOfInt (n)) > 10) then 1 + additivePersistence
                                               ^^^^^^^^^^^^^^^^^^^
Error: This expression has type int -> 'a
       but an expression was expected of type int
